# mega-outlook-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: inspection-prompt.md
src/mega_outlook_mcp/: com_bridge.py  constants.py  errors.py  server.py
src/mega_outlook_mcp/applescript/: __init__.py  escape.py  templates.py
src/mega_outlook_mcp/backends/: __init__.py  base.py  macos_applescript.py  windows_com.py
src/mega_outlook_mcp/baseline/: __init__.py  outlook_baseline.json
src/mega_outlook_mcp/models/: inputs.py
src/mega_outlook_mcp/tools/: __init__.py  attachment_tools.py  calendar_tools.py  composite_tools.py  contact_tools.py  diagnostics_tools.py  email_tools.py  exchange_tools.py  file_tools.py  folder_tools.py  mailbox_tools.py  metadata_tools.py  parity_tools.py  thread_tools.py  time_tools.py
src/mega_outlook_mcp/utils/: email_extract.py  filter_utils.py  folder_utils.py  mapi_props.py  rfc5322.py  smtp_resolver.py  subject_utils.py  time_utils.py
