[project]
name = "mega-outlook-mcp"
version = "1.0.0"
description = "Cross-platform MCP server for local Microsoft Outlook automation (Windows COM + macOS AppleScript). 64 tools spanning email, calendar, contacts, tasks, notes, rules, free/busy, GAL, and Exchange-specific surface."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "grokeverything" }]
keywords = ["outlook", "mcp", "model-context-protocol", "exchange", "applescript", "pywin32", "email", "calendar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.0",
    "pywin32>=305; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/grokeverything/mega-outlook-mcp"
Repository = "https://github.com/grokeverything/mega-outlook-mcp"
Issues = "https://github.com/grokeverything/mega-outlook-mcp/issues"

[project.scripts]
mega-outlook-mcp = "mega_outlook_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mega_outlook_mcp"]
